# QualiR

./: .gitignore  Cargo.toml  README.md  TODO.md  pyregistry-test2  qualirs.toml
src/: lib.rs  main.rs
src/analysis/: detector.rs  engine.rs  mod.rs  visitor.rs
src/cli/: args.rs  detector_list.rs  json_output.rs  llm_snippet.rs  mod.rs  output.rs  suggested_code.rs
src/detectors/: mod.rs  policy.rs
src/detectors/architecture/: cyclic_crate_dependency.rs  feature_concentration.rs  god_module.rs  hidden_global_state.rs  layer_violation.rs  leaky_error.rs  mod.rs  project_hygiene.rs  public_api_explosion.rs  public_api_leak.rs
src/detectors/concurrency/: arc_mutex_overuse.rs  async_trait_overhead.rs  blocking_channel_in_async.rs  blocking_in_async.rs  deadlock_risk.rs  dropped_join_handle.rs  holding_lock_across_await.rs  large_future.rs  missing_send_bound.rs  mod.rs  spawn_without_join.rs  std_mutex_in_async.rs  sync_drop_blocking.rs
src/detectors/design/: anemic_struct.rs  boolean_flag_argument.rs  broken_constructor.rs  data_clumps.rs  deref_abuse.rs  excessive_generics.rs  fat_impl.rs  god_struct.rs  large_error_enum.rs  large_trait.rs  manual_drop.rs  mod.rs  multiple_impl_blocks.rs  primitive_obsession.rs  stringly_typed_domain.rs  wide_hierarchy.rs
src/detectors/implementation/: chars_count_length_check.rs  clone_before_move_into_collection.rs  clone_on_copy.rs  collect_then_iterate.rs  copy_drop_conflict.rs  cyclomatic_complexity.rs  deep_closure_nesting.rs  deep_if_else.rs  deep_match.rs  deeply_nested_type.rs  derivable_impl.rs  duplicate_match_arms.rs  excessive_clone.rs  excessive_unwrap.rs  full_sort_for_single_element.rs  inefficient_iterator_step.rs  inline_candidate.rs  interior_mutability_abuse.rs  large_enum.rs  large_value_passed_by_value.rs  lifetime_explosion.rs  local_lock_in_single_threaded_scope.rs  long_closure.rs  long_function.rs  long_method_chain.rs  magic_numbers.rs  manual_default_constructor.rs  manual_find_loop.rs  manual_option_result_mapping.rs  missing_collection_preallocation.rs  mod.rs  needless_dynamic_dispatch.rs  needless_explicit_lifetime.rs  needless_intermediate_string_formatting.rs  panic_in_library.rs  perf_utils.rs  repeated_expensive_construction.rs  repeated_regex_construction.rs  repeated_string_conversion.rs  sort_before_min_max.rs  (+5 more)
src/detectors/unsafe/: ffi_type_not_repr_c.rs  ffi_without_wrapper.rs  inline_assembly.rs  large_unsafe_block.rs  mod.rs  multi_mut_ref_unsafe.rs  raw_pointer_arithmetic.rs  transmute_usage.rs  unsafe_fn_missing_safety_docs.rs  unsafe_impl_safety_docs.rs  unsafe_without_comment.rs
src/domain/: config.rs  mod.rs  smell.rs  source.rs
src/infrastructure/: mod.rs  source.rs  walker.rs
tests/: detector_tests.rs  engine_tests.rs  showcase_cases.rs
tests/common/: mod.rs
vscode/: .vscodeignore  README.md  package-lock.json  package.json
vscode/scripts/: build-binary.js
vscode/src/: extension.ts
(+20 files in other folders)
