[package]
name = "qualirs"
version = "0.2.0"
edition = "2024"
description = "Structural and architectural code smell detector for Rust"
license = "MIT"

[lib]
name = "qualirs"
path = "src/lib.rs"

[[bin]]
name = "qualirs"
path = "src/main.rs"

[dependencies]
# AST parsing
syn = { version = "2", features = ["full", "extra-traits", "visit", "parsing", "printing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal output
colored = "3"
comfy-table = "7"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# File walking
ignore = "0.4"

# Parallelism
rayon = "1"

# Error handling
thiserror = "2"
anyhow = "1"
fixed-json = { version = "0.2.1", features = ["std"] }

[dev-dependencies]
tempfile = "3"
