[package]
name = "qualirs"
version = "0.2.0"
edition = "2024"
description = "Structural and architectural code smell detector for Rust"
license = "MIT"

[lib]
name = "qualirs"
path = "src/lib.rs"

[[bin]]
name = "qualirs"
path = "src/main.rs"

[dependencies]
# AST parsing
syn = { version = "2", features = ["full", "extra-traits", "visit", "parsing", "printing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal output
colored = "3"
comfy-table = "7"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File walking
ignore = "0.4"

# Remote source preparation
flate2 = "1"
tar = "0.4"
tempfile = "3"
ureq = "2"

# Parallelism
rayon = "1"

# Error handling
thiserror = "2"
anyhow = "1"
fixed-json = { version = "0.2.1", features = ["std"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
